fix spacing

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -72,7 +72,7 @@
 .resume-work-info-container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 1fr 2fr;
+  grid-template-rows: 1fr 1fr flex;
 }
 
 .resume-edu-info-container {
